# pAPIrus

./: .envrc  Cargo.toml  LICENSE  README.md  package.json  rustfmt.toml
.config/: config.toml
.github/workflows/: cd.yml
papirus-core/: Cargo.toml
papirus-core/src/: lib.rs
papirus-tui/: Cargo.toml
papirus-tui/src/: main.rs  types.rs  utils.rs
papirus-tui/src/themes/: base16-default-dark.toml
papirus-tui/src/views/: app.rs  input.rs  mod.rs  request.rs  response.rs
src/: action.rs  app.rs  components.rs  config.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: home.rs  request.rs
