[package]
name = "papirus-core"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description = "Core functionality library for pAPIrus"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.93"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }

[dev-dependencies]
mockall = "0.13.0"
wiremock = "0.6.2"
