[package]
name = "papirus-tui"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description = "TUI interface for pAPIrus"
repository.workspace = true
license.workspace = true

[[bin]]
name = "papirus"
path = "src/main.rs"

[dependencies]
cursive = { version = "0.21.1", features = ["toml"] }
cursive-tabs = "0.8.0"
syntect = "5.2.0"
