[package]
name = "papirus"
version = "0.0.0"
description = "Cross-platform, simple REST API desktop client"
authors = ["Nikhil Prabhu <nikhilprabhu98@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/nikhil-prabhu/pAPIrus"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
